--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
     --dark:rgb(0, 0, 0);
     --focus:rgb(69, 233, 105)
 }
+
+::selection{
+    user-select: all;
+    background-color: aquamarine;
+}
 body{
     background-color: var(--dark);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -43,12 +48,19 @@ h1,p {
     position: relative;
     top: -40px;
 }
+     
 pre{
 border-radius: 8px;
 background: linear-gradient(rgba(58, 206, 209)0%, 
 rgba(12, 176, 110, 0.6)100% )
- 
 }
+code{
+    user-select: all;
+ }      
+.card:hover,.card-title:hover{
+    box-shadow: 0px 0px 30px var(--focus);
+    transition: all .5s ease-in-out;
+ }
 footer{
     text-align: center;
     color: var(--focus);
